# DepthCalc-demo

./: .gitignore  CMakeLists.txt  README.md  app_icon.rc  icons.qrc
include/: FileConverter.h  calibrationmanager.h  dataloader.h  dccontroller.h  dcsettings.h  dcvmanager.h  gl1manager.h  mainwindow.h  plotwidget.h  progressdialog.h  przmanager.h  settingsdialog.h  snapshotmanager.h
src/: FileConverter.cpp  calibrationmanager.cpp  dataloader.cpp  dccontroller.cpp  dcsettings.cpp  dcvmanager.cpp  gl1manager.cpp  main.cpp  mainwindow.cpp  plotwidget.cpp  progressdialog.cpp  przmanager.cpp  settingsdialog.cpp  snapshotmanager.cpp
ui/: mainwindow.ui  progressdialog.ui  settingsdialog.ui
